<resources>
    <string name="app_name">Project Blaze</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">About</string>
    <!--
    <string name="title_section3">Settings</string>
    -->
    <string name="title_section4">Logout</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="acknowledge">Legal</string>



    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_login">Back</string>
    <string name="btn_to_register">Register Here</string>
    <string name="btn_to_about">Back</string>

    <string name="txt_username">Username:</string>
    <string name="txt_email">Email Address:</string>
    <string name="txt_password">Password:</string>
    <string name="txt_share">Share on</string>
    <string name="txt_acknowledgeH1">Legal 1:</string>

    <string name="txt_acknowledgeH2">Legal 2:</string>

    <string name="txt_acknowledgeH3">Legal 3:</string>


    <string name="txt_acknowledge1">
        Name: Colorful Map Marker Set Vector\n
        Author: Pluma319\n
        Asset: Image\n
        Usage: Free for commercial and personal use\n
        Source: http://pluma319.deviantart.com/art/Map-Markers-455900567
    </string>

    <string name="txt_acknowledge2">
        Name: Freebie:Flat Social Icon set\n
        Author: Mohammed Alyousfi\n
        Asset: Image\n
        Usage: Free for commercial and personal use\n
        Source: http://speckyboy.com/2013/09/16/freebie-flat-social-icon-set/
    </string>

    <string name="txt_acknowledge3">
        Name: Narfstuff User Interface Sound Pack\n
        Author: Narfstuff\n
        Asset: Sound\n
        Usage: Free for commercial and personal use\n
        Source: http://www.narfstuff.co.uk/2009/09/13/royalty-free-ui-sound-pack-now-free/
    </string>





    <string name="txt_copyright">Copyright © 2015. Project Blaze</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>

</resources>
