<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/fragment_background"
    android:gravity="center"
    tools:context=".MainActivity$PlaceholderFragment"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >




            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_matappicon"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"

                />


            <TextView
                android:text="Project Blaze"
                android:textSize="20dp"
                android:id="@+id/textView1"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_login_register"

                />


            <TextView
                android:id="@+id/textView2"
                android:text="Version 1.0"
                android:textSize="10dp"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                />



            <TextView
                android:id="@+id/textView3"
                android:text="Developed by:"
                android:textSize="10dp"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/textView4"
                android:text="Michael Horn"
                android:textSize="10dp"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/textView5"
                android:text="Jordan McDonough"
                android:textSize="10dp"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                />


            <Button
                android:id="@+id/btn_ack"
                android:text="@string/acknowledge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ack_button"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:id="@+id/textShare"
                android:text="@string/txt_share"
                android:textSize="20dp"
                android:textColor="@color/text_login_register"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                />


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"

            >

            <ImageView
                android:id="@+id/btn_twitter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_twitter"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/textView6"
                android:text="or"
                android:textSize="15dp"
                android:paddingTop="30dp"
                android:layout_gravity="center_horizontal"
                />
            <ImageView
                android:id="@+id/btn_facebook"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_facebook"
                android:gravity="left"
                />




        </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/textCopyright"
            android:text="@string/txt_copyright"
            android:textSize="10dp"
            android:textColor="@color/text_login_register"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            />

<!--
        <TextView
            android:id="@+id/text1"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/text2"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/text3"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/text4"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/text5"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/text6"
            android:text=""
            android:textSize="20px"


            android:gravity="center_horizontal"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />

-->


    </LinearLayout>
</LinearLayout>
